Translations udpates - fr zh_CN
(Old svn revision: 29290)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,7 +1,10 @@
+2009-01-21  Maximilian Schleiss <maximilian@xfce.org>
+
+	* zh_CN.po: Simplified Chinese translation update (Chris K. Zhang)
+
 2009-01-19 Og Maciel <ogmaciel@gnome.org>
 
-	* pt_BR.po: Updated Brazilian Portuguese translation by
-	Henrique P. Machado.
+	* pt_BR.po: Updated Brazilian Portuguese translation (Henrique P. Machado)
 
 2009-01-19  Maximilian Schleiss <maximilian@xfce.org>
 
