--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-23 Per Kongstad <pko@xfce.org>
+
+	* da.po: Danish translation updated (Per Kongstad)
+
 2009-01-21  Maximilian Schleiss <maximilian@xfce.org>
 
 	* zh_CN.po: Simplified Chinese translation update (Chris K. Zhang)
