Danish translation update M    xfconf/trunk/po/da.po M    xarchiver/trunk/po/da.po M    xfce4-panel/trunk/po/da.po
(Old svn revision: 29299)

--- a/po/da.po
+++ b/po/da.po
@@ -148,7 +148,7 @@ msgstr "Genstarter kørende instans af xfce4-panel"
 
 #: ../panel/main.c:64
 msgid "Log out the active session"
-msgstr "Log ud af aktive session"
+msgstr "Log ud af den aktive session"
 
 #: ../panel/main.c:65
 msgid "Close all panels and end the program"
@@ -201,7 +201,7 @@ msgstr "Træk elementer fra listen til et panel eller træk dem tilbage til list
 msgid ""
 "Drag items from the list to a panel or remove\n"
 "them by dragging them back to the list."
-msgstr "Træk elementer fra listen til et panel eller træk dem tilbage til listen for at fjerne dem."
+msgstr "Træk elementer fra listen til et panel eller fjern dem ved at trække dem tilbage på listen."
 
 #: ../panel/panel-dialogs.c:653
 msgid "_Search:"
@@ -861,7 +861,7 @@ msgstr "Skift mellem åbne vinduer ved brug af knapper"
 
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:1
 msgid "Switch between open windows using a menu"
-msgstr "Skift mellem åbne vinduer ved brug af menu"
+msgstr "Skift mellem åbne vinduer ved brug afen menu"
 
 #: ../settings/xfce4-panel-manager.desktop.in.h:3
 msgid "Panel Manager"
