Update French translation
(Old svn revision: 29301)

--- a/po/fr.po
+++ b/po/fr.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-01-12 18:06+0100\n"
-"PO-Revision-Date: 2009-01-18 17:18+0100\n"
+"PO-Revision-Date: 2009-01-23 23:11+0100\n"
 "Last-Translator: Maximilian Schleiss <maximilian@xfce.org>\n"
 "Language-Team: French <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
@@ -176,11 +176,12 @@ msgstr "Ajouter des éléments"
 #. TRANSLATORS: Make sure this string is equally spread in the add items dialog,
 #. since gtk labels do not update text wrapping on a dialog resize.
 #: ../panel/panel-dialogs.c:642
-#, fuzzy
 msgid ""
 "Drag items from the list to a panel or remove\n"
 "them by dragging them back to the list."
-msgstr "Faites glisser des éléments de la liste vers un panneau pour les y ajouter ou enlevez les en les faisant glisser vers la liste."
+msgstr ""
+"Glissez des éléments depuis la liste vers un panneau ou supprimez les en les "
+"déplaçants depuis le panneau vers la liste."
 
 #: ../panel/panel-dialogs.c:653
 msgid "_Search:"
