--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-23 Mike Massonnet <mmassonnet@xfce.org>
+
+	* fr.po: Fix last fuzzy string
+
 2009-01-23 Per Kongstad <pko@xfce.org>
 
 	* da.po: Danish translation updated (Per Kongstad)
