Meh, there was an important \n missing
(Old svn revision: 29302)

--- a/po/fr.po
+++ b/po/fr.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-01-12 18:06+0100\n"
-"PO-Revision-Date: 2009-01-23 23:11+0100\n"
+"PO-Revision-Date: 2009-01-23 23:18+0100\n"
 "Last-Translator: Maximilian Schleiss <maximilian@xfce.org>\n"
 "Language-Team: French <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
@@ -180,7 +180,7 @@ msgid ""
 "Drag items from the list to a panel or remove\n"
 "them by dragging them back to the list."
 msgstr ""
-"Glissez des éléments depuis la liste vers un panneau ou supprimez les en les "
+"Glissez des éléments depuis la liste vers un panneau ou\nsupprimez les en les "
 "déplaçants depuis le panneau vers la liste."
 
 #: ../panel/panel-dialogs.c:653
