Update Finnish translation.
(Old svn revision: 29338)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,8 +1,12 @@
-2009-01-23 Mike Massonnet <mmassonnet@xfce.org>
+2009-01-25  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
+
+	* fi.po: Update Finnish translation.
+
+2009-01-23  Mike Massonnet <mmassonnet@xfce.org>
 
 	* fr.po: Fix last fuzzy string
 
-2009-01-23 Per Kongstad <pko@xfce.org>
+2009-01-23  Per Kongstad <pko@xfce.org>
 
 	* da.po: Danish translation updated (Per Kongstad)
 
@@ -10,7 +14,7 @@
 
 	* zh_CN.po: Simplified Chinese translation update (Chris K. Zhang)
 
-2009-01-19 Og Maciel <ogmaciel@gnome.org>
+2009-01-19  Og Maciel <ogmaciel@gnome.org>
 
 	* pt_BR.po: Updated Brazilian Portuguese translation (Henrique P. Machado)
 
@@ -28,7 +32,7 @@
 
 	* sv.po: Swedish translation update (Daniel Nylander)
 
-2009-01-15 Piarres Beobide <pi@beobide.net>
+2009-01-15  Piarres Beobide <pi@beobide.net>
 
         * eu.po: Basque translation update
 
