--- a/po/fi.po
+++ b/po/fi.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-01-12 18:06+0100\n"
-"PO-Revision-Date: 2009-01-03 14:11+0200\n"
+"POT-Creation-Date: 2009-01-25 13:01+0200\n"
+"PO-Revision-Date: 2009-01-25 13:05+0200\n"
 "Last-Translator: Jari Rahkonen <jari.rahkonen@pp1.inet.fi>\n"
 "Language-Team: Finnish <translation-team-fi@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -104,36 +104,31 @@ msgstr "Kehittäjä"
 
 #: ../panel/main.c:60
 msgid "Print version information and exit"
-msgstr ""
+msgstr "Tulosta versiotiedot"
 
 #: ../panel/main.c:61
-#, fuzzy
 msgid "Show 'Customize Panel' dialog"
-msgstr "Mukauta paneelia..."
+msgstr "Näytä paneelin mukautusikkuna"
 
 #: ../panel/main.c:62
-#, fuzzy
 msgid "Save the panel configuration"
-msgstr "Tallenna asetukset"
+msgstr "Tallenna paneelin asetukset"
 
 #: ../panel/main.c:63
-#, fuzzy
 msgid "Restart the running instance of xfce4-panel"
-msgstr "Käynnistetään xfce4-panel uudelleen"
+msgstr "Käynnistä xfce4-panel uudelleen"
 
 #: ../panel/main.c:64
-#, fuzzy
 msgid "Log out the active session"
-msgstr "Kirjaudu ulos tai lukitse näyttö"
+msgstr "Kirjaa ulos aktiivinen istunto"
 
 #: ../panel/main.c:65
 msgid "Close all panels and end the program"
 msgstr "Sulje paneelit ja ohjelma"
 
 #: ../panel/main.c:66
-#, fuzzy
 msgid "Show 'Add New Items' dialog"
-msgstr "Lisää osia"
+msgstr "Näytä osien lisäysikkuna"
 
 #. TRANSLATORS: Errors when gtk_init failed, probably the command
 #. executed without xserver running
@@ -152,7 +147,6 @@ msgid "Please report bugs to <%s>."
 msgstr "Ilmoita virheistä osoitteeseen <%s>."
 
 #: ../panel/main.c:151
-#, fuzzy
 msgid "Xfce4-panel already running"
 msgstr "Xfce4-panel on jo käynnissä"
 
@@ -282,7 +276,7 @@ msgstr "Läpi_näkyvyys %:"
 
 #: ../panel/panel-dialogs.c:1471
 msgid "Make active panel _opaque"
-msgstr "Tee aktiivisesta paneelista läpinäkymätön"
+msgstr "Tee aktiivisesta paneelista läpinäky_mätön"
 
 #: ../panel/panel-dialogs.c:1514 ../panel/panel-dialogs.c:1550
 #: ../panel/panel-dialogs.c:1574
@@ -414,7 +408,7 @@ msgstr "_Täytä käytettävissä oleva tila"
 msgid "New Item"
 msgstr "Uusi osa"
 
-#: ../plugins/launcher/launcher-exec.c:565
+#: ../plugins/launcher/launcher-exec.c:568
 #, c-format
 msgid "Failed to launch \"%s\""
 msgstr "Kohteen \"%s\" suoritus epäonnistui"
@@ -750,7 +744,6 @@ msgid "Adds a space or a line between panel items"
 msgstr "Lisää tyhjää tilaa tai viiva paneelin osien väliin"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:1
-#, fuzzy
 msgid "Hide all windows and show the desktop"
 msgstr "Piilota ikkunat ja näytä työpöytä"
 
@@ -764,49 +757,12 @@ msgstr "Ilmoituskuvakkeille varattu alue"
 
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
 msgid "Switch between open windows using buttons"
-msgstr ""
+msgstr "Käytä painikkeita ikkunoiden välillä siirtymiseen"
 
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:1
 msgid "Switch between open windows using a menu"
-msgstr ""
+msgstr "Käytä valikkoa ikkunoiden välillä siirtymiseen"
 
 #: ../settings/xfce4-panel-manager.desktop.in.h:3
 msgid "Panel Manager"
 msgstr "Paneelin hallinta"
-
-#~ msgid "Unknown"
-#~ msgstr "Tuntematon"
-
-#~ msgid "Show this message and exit"
-#~ msgstr "Näytä tämä viesti ja poistu"
-
-#~ msgid "Show configuration dialog"
-#~ msgstr "Näytä asetusdialogi"
-
-#~ msgid "Restart panels"
-#~ msgstr "Käynnistä paneelit uudelleen"
-
-#~ msgid "End the session"
-#~ msgstr "Lopeta istunto"
-
-#~ msgid "Add new items"
-#~ msgstr "Lisää uusi osa"
-
-#, fuzzy
-#~ msgid "Copyright (c) 2004-2007"
-#~ msgstr "Tekijänoikeus (c) 2004-2009"
-
-#~ msgid "Popup position:"
-#~ msgstr "Ponnahdusvalikon sijainti"
-
-#~ msgid "Automatic"
-#~ msgstr "Automaattinen"
-
-#~ msgid "Toggle desktop show/hide"
-#~ msgstr "Näytä tai piilota työpöytä"
-
-#~ msgid "Show all running applications"
-#~ msgstr "Näytä kaikki käynnissä olevat sovellukset"
-
-#~ msgid "Show list of available windows"
-#~ msgstr "Näytä lista käytettävissä olevista ikkunoista"
