Fixed extern char** environ is not defined on BSD platforms (bug #4834).
(Old svn revision: 29341)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+x.x.xx
+======
+- Fixed extern char** environ is not defined on BSD platforms (bug #4834).
+
 4.5.93
 ======
 - Cache tooltip icons. Since gtk queries it a lot, resulting in too many
