Translations updates - ja zh_CN
(Old svn revision: 29353)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-25  Maximilian Schleiss <maximilian@xfce.org>
+
+	* ja.po: Japanese translation update (Masato Hashimoto)
+
 2009-01-25  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
 
 	* fi.po: Update Finnish translation.
