--- a/po/ja.po
+++ b/po/ja.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.5.0.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-01-12 18:06+0100\n"
-"PO-Revision-Date: 2008-12-07 17:30+0900\n"
+"POT-Creation-Date: 2009-01-24 21:20+0900\n"
+"PO-Revision-Date: 2009-01-19 22:18+0900\n"
 "Last-Translator: Masato Hashimoto <cabezon.hashimoto@gmail.com>\n"
 "Language-Team: Japanese <xfce-users-jp@ml.fdiary.net>\n"
 "MIME-Version: 1.0\n"
@@ -56,15 +56,13 @@ msgstr "削除"
 
 #. TRANSLATORS: Add menu item in the right-click plugin menu
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:903 ../panel/panel.c:606
-#, fuzzy
 msgid "Add New Items..."
-msgstr "アイテムの追加"
+msgstr "新しいアイテムの追加..."
 
 #. TRANSLATORS: Customize menu item in the right-click plugin menu
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:915 ../panel/panel.c:595
-#, fuzzy
 msgid "Customize Panel..."
-msgstr "パネルの設定"
+msgstr "パネルの設定..."
 
 #: ../panel/panel.c:621 ../plugins/actions/actions.c:284
 #: ../plugins/actions/actions.c:318 ../plugins/actions/actions.c:455
@@ -106,40 +104,39 @@ msgstr "選択したパネルとそこにある全てのアイテムが削除さ
 msgid "Developer"
 msgstr "開発者"
 
+# CLI --help
 #: ../panel/main.c:60
 msgid "Print version information and exit"
-msgstr ""
+msgstr "バージョン情報を表示して終了する"
 
+# CLI --help
 #: ../panel/main.c:61
-#, fuzzy
 msgid "Show 'Customize Panel' dialog"
-msgstr "パネルの設定"
+msgstr "'パネルの設定' ダイアログを表示する"
 
 # CLI --help
 #: ../panel/main.c:62
-#, fuzzy
 msgid "Save the panel configuration"
-msgstr "設定を保存する"
+msgstr "パネルの設定を保存する"
 
 #: ../panel/main.c:63
-#, fuzzy
 msgid "Restart the running instance of xfce4-panel"
-msgstr "xfce4-panel を再起動しています..."
+msgstr "動作中の xfce4-panel インスタンスを再起動する"
 
+# CLI --help
 #: ../panel/main.c:64
-#, fuzzy
 msgid "Log out the active session"
-msgstr "ログアウトまたは画面をロックします"
+msgstr "現在のセッションをログアウトする"
 
 # CLI --help
 #: ../panel/main.c:65
 msgid "Close all panels and end the program"
 msgstr "全てのパネルを閉じてパネルのセッションを終了する"
 
+# CLI --help
 #: ../panel/main.c:66
-#, fuzzy
 msgid "Show 'Add New Items' dialog"
-msgstr "アイテムの追加"
+msgstr "'新しいアイテムの追加' ダイアログを表示する"
 
 #. TRANSLATORS: Errors when gtk_init failed, probably the command
 #. executed without xserver running
@@ -158,9 +155,8 @@ msgid "Please report bugs to <%s>."
 msgstr "バグは <%s> まで報告してください。"
 
 #: ../panel/main.c:151
-#, fuzzy
 msgid "Xfce4-panel already running"
-msgstr "xfce4-panel は既に実行されています"
+msgstr "xfce4-panel は既に動作中です"
 
 #: ../panel/main.c:162
 msgid "Restarting xfce4-panel..."
@@ -173,24 +169,22 @@ msgid "Could not open \"%s\" module"
 msgstr "\"%s\" モジュールを開けませんでした"
 
 #: ../panel/panel-dialogs.c:611
-#, fuzzy
 msgid "Add New Items"
-msgstr "アイテムの追加"
+msgstr "新しいアイテムの追加"
 
 #. TRANSLATORS: Make sure this string is equally spread in the add items dialog,
 #. since gtk labels do not update text wrapping on a dialog resize.
 #: ../panel/panel-dialogs.c:642
-#, fuzzy
 msgid ""
 "Drag items from the list to a panel or remove\n"
 "them by dragging them back to the list."
 msgstr ""
 "このリストからパネルへドラッグするとアイテムが追加されます。\n"
-"削除するにはパネルからこのリストへドラッグしてください。"
+"削除はパネルからこのリストへドラッグしてください。"
 
 #: ../panel/panel-dialogs.c:653
 msgid "_Search:"
-msgstr ""
+msgstr "検索(_S):"
 
 #: ../panel/panel-dialogs.c:881 ../panel/panel-dialogs.c:1117
 msgid "Normal Width"
@@ -210,7 +204,7 @@ msgstr "最大の縦幅にする"
 
 #: ../panel/panel-dialogs.c:895 ../panel/panel-dialogs.c:1132
 msgid "Span Monitors"
-msgstr "複数モニタをスパンする"
+msgstr "複数モニタにまたがって表示する"
 
 #: ../panel/panel-dialogs.c:958 ../panel/panel-dialogs.c:1197
 #: ../plugins/launcher/launcher-dialog.c:1558
@@ -238,14 +232,12 @@ msgid "Position"
 msgstr "位置"
 
 #: ../panel/panel-dialogs.c:1011
-#, fuzzy
 msgid "_Fixed position"
-msgstr "位置を固定する"
+msgstr "位置を固定する(_F)"
 
 #: ../panel/panel-dialogs.c:1017
-#, fuzzy
 msgid "Freely _moveable"
-msgstr "自由に移動可能"
+msgstr "自由に移動可能(_M)"
 
 #: ../panel/panel-dialogs.c:1140
 msgid "Auto_hide"
@@ -283,21 +275,18 @@ msgid "Appearance"
 msgstr "外観"
 
 #: ../panel/panel-dialogs.c:1414
-#, fuzzy
 msgid "_Size (pixels):"
-msgstr "サイズ (ピクセル):"
+msgstr "サイズ(_S) (ピクセル):"
 
 # FIXME: compositor won't work on irix, thus it's blind-translation
 #: ../panel/panel-dialogs.c:1445
-#, fuzzy
 msgid "_Transparency (%):"
-msgstr "透明度 (%):"
+msgstr "透明度(_T) (%):"
 
 # FIXME: compositor won't work on irix, thus it's blind-translation
 #: ../panel/panel-dialogs.c:1471
-#, fuzzy
 msgid "Make active panel _opaque"
-msgstr "アクティブなパネルを不透明にする"
+msgstr "アクティブなパネルを不透明にする(_O)"
 
 #: ../panel/panel-dialogs.c:1514 ../panel/panel-dialogs.c:1550
 #: ../panel/panel-dialogs.c:1574
@@ -308,14 +297,12 @@ msgstr "パネル %d"
 #. TRANSLATORS: Tooltip for the add button in the customize panel dialog
 #: ../panel/panel-dialogs.c:1594
 msgid "Remove the currently selected panel"
-msgstr ""
+msgstr "現在選択されているパネルを削除します"
 
-# CLI --help
 #. TRANSLATORS: Tooltip for the add button in the customize panel dialog
 #: ../panel/panel-dialogs.c:1608
-#, fuzzy
 msgid "Add a new panel"
-msgstr "新しいアイテムを追加する"
+msgstr "新しいパネルを追加します"
 
 #: ../panel/panel-dialogs.c:1668
 #: ../settings/xfce4-panel-manager.desktop.in.h:2
@@ -324,9 +311,8 @@ msgstr "パネル"
 
 #: ../panel/panel-dialogs.c:1675
 #: ../settings/xfce4-panel-manager.desktop.in.h:1
-#, fuzzy
 msgid "Customize the panel settings"
-msgstr "パネルの設定"
+msgstr "パネルの設定をカスタマイズします"
 
 #: ../plugins/actions/actions.c:265 ../plugins/actions/actions.c:301
 #: ../plugins/actions/actions.c:456
@@ -338,20 +324,18 @@ msgstr "画面をロック"
 msgid "Action Buttons"
 msgstr "アクションボタン"
 
-# In ja translation: This is the label for combobox in Action button property dialog. Follow the usual style.
+# In ja translation: This is the label for combobox in Action button property dialog. Coordinate with the usual style.
 #: ../plugins/actions/actions.c:445
-#, fuzzy
 msgid "_Select action type:"
-msgstr "アクションのタイプ:"
+msgstr "アクションのタイプ(_S):"
 
 #: ../plugins/actions/actions.c:457
 msgid "Quit + Lock screen"
 msgstr "終了して画面をロック"
 
 #: ../plugins/actions/actions.c:468
-#, fuzzy
 msgid "_Orientation:"
-msgstr "パネルの方向:"
+msgstr "パネルの方向(_O):"
 
 #: ../plugins/clock/clock-dialog.c:357
 msgid "Custom"
@@ -419,26 +403,23 @@ msgid "Icon Box"
 msgstr "アイコン箱"
 
 #: ../plugins/iconbox/iconbox.c:929
-#, fuzzy
 msgid "Only show _minimized applications"
-msgstr "最小化したアプリのみ表示する"
+msgstr "最小化したアプリケーションのみ表示する(_M)"
 
 #: ../plugins/iconbox/iconbox.c:938
-#, fuzzy
 msgid "Show applications of _all workspaces"
-msgstr "全ワークスペースのアプリケーションを表示する"
+msgstr "全ワークスペースのアプリケーションを表示する(_A)"
 
 #: ../plugins/iconbox/iconbox.c:946 ../plugins/tasklist/tasklist-dialogs.c:186
-#, fuzzy
 msgid "Use all available _space"
-msgstr "利用可能な全スペースを使用する"
+msgstr "利用可能な全スペースを使用する(_S)"
 
 #. TRANSLATORS: Name of a newly created launcher
 #: ../plugins/launcher/launcher.c:705 ../plugins/launcher/launcher.c:770
 msgid "New Item"
 msgstr "新しいアイテム"
 
-#: ../plugins/launcher/launcher-exec.c:565
+#: ../plugins/launcher/launcher-exec.c:568
 #, c-format
 msgid "Failed to launch \"%s\""
 msgstr "\"%s\" を起動できませんでした"
@@ -488,34 +469,28 @@ msgid "Select an Icon for \"%s\""
 msgstr "\"%s\" のアイコンを選択してください"
 
 #: ../plugins/launcher/launcher-dialog.c:1122
-#, fuzzy
 msgid "_Name:"
-msgstr "名前(_N)"
+msgstr "名前(_N):"
 
 #: ../plugins/launcher/launcher-dialog.c:1140
-#, fuzzy
 msgid "_Description:"
-msgstr "説明(_D)"
+msgstr "説明(_D):"
 
 #: ../plugins/launcher/launcher-dialog.c:1159
-#, fuzzy
 msgid "_Icon:"
-msgstr "アイコン(_I)"
+msgstr "アイコン(_I):"
 
 #: ../plugins/launcher/launcher-dialog.c:1177
-#, fuzzy
 msgid "Co_mmand:"
-msgstr "コマンド(_M)"
+msgstr "コマンド(_M):"
 
 #: ../plugins/launcher/launcher-dialog.c:1204
-#, fuzzy
 msgid "_Working Directory:"
-msgstr "作業フォルダ(_W)"
+msgstr "作業フォルダ(_W):"
 
 #: ../plugins/launcher/launcher-dialog.c:1210
-#, fuzzy
 msgid "Select a Working Directory"
-msgstr "フォルダを選択してください"
+msgstr "作業フォルダを選択してください"
 
 #: ../plugins/launcher/launcher-dialog.c:1231
 msgid "Run in _terminal"
@@ -545,29 +520,24 @@ msgid "Inside Button"
 msgstr "アイコンボタン"
 
 #: ../plugins/pager/pager.c:368 ../plugins/pager/pager.desktop.in.in.h:2
-#, fuzzy
 msgid "Workspace Switcher"
-msgstr "ワークスペース %d"
+msgstr "ワークスペーススイッチャ"
 
 #: ../plugins/pager/pager.c:397
-#, fuzzy
 msgid "Number _of rows:"
-msgstr "行数:"
+msgstr "行数(_O):"
 
 #: ../plugins/pager/pager.c:401
-#, fuzzy
 msgid "Number _of columns:"
-msgstr "列数:"
+msgstr "列数(_O):"
 
 #: ../plugins/pager/pager.c:418
-#, fuzzy
 msgid "Switch workspaces using the mouse _wheel"
-msgstr "マウスホイールを使用してワークスペースを切り替える"
+msgstr "マウスホイールを使用してワークスペースを切り替える(_W)"
 
 #: ../plugins/pager/pager.c:426
-#, fuzzy
 msgid "Show workspace _names"
-msgstr "ワークスペース名を表示する"
+msgstr "ワークスペース名を表示する(_N)"
 
 #: ../plugins/separator/separator.c:409
 #: ../plugins/separator/separator.desktop.in.in.h:2
@@ -579,14 +549,12 @@ msgid "Separator Style"
 msgstr "セパレータのスタイル"
 
 #: ../plugins/separator/separator.c:436
-#, fuzzy
 msgid "_Empty space"
 msgstr "空のスペース(_E)"
 
 #: ../plugins/separator/separator.c:445
-#, fuzzy
 msgid "E_xpanding empty space"
-msgstr "拡張する空のスペース(_E)"
+msgstr "拡張する空のスペース(_X)"
 
 #: ../plugins/separator/separator.c:454
 msgid "_Line"
@@ -610,19 +578,18 @@ msgstr "隠したウィンドウを元に戻します"
 msgid "Hide windows and show desktop"
 msgstr "ウィンドウを隠してデスクトップを表示します"
 
+# former name 'System tray'
 #: ../plugins/systray/xfce-tray-plugin.c:70
 #: ../plugins/systray/xfce-tray-dialogs.c:333
 #: ../plugins/systray/systray.desktop.in.in.h:2
-#, fuzzy
 msgid "Notification Area"
-msgstr "緊急通知"
+msgstr "通知エリア"
 
 #. TRANSLATORS: This message is shown in an info dialog when the users
 #. add a notification area to a screen with a running systray manager.
 #: ../plugins/systray/xfce-tray-plugin.c:98
-#, fuzzy
 msgid "There is already a notification area running on this screen"
-msgstr "この画面にはすでに実行しているシステムトレイがあります"
+msgstr "この画面にはすでに実行している通知エリアがあります"
 
 #. TRANSLATORS: Bit of a weird text, but this is shown when for some
 #. reason another tray takes the ownership of the tray icons and this
@@ -657,19 +624,16 @@ msgid "Task List"
 msgstr "タスクリスト"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:172
-#, fuzzy
 msgid "_Minimum width:"
-msgstr "最小幅:"
+msgstr "最小幅(_M):"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:193
-#, fuzzy
 msgid "Use _flat buttons"
-msgstr "フラットボタンを使用する"
+msgstr "フラットボタンを使用する(_F)"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:199
-#, fuzzy
 msgid "Show _handle"
-msgstr "取っ手を表示する"
+msgstr "取っ手を表示する(_H)"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:211
 msgid "Show tasks from _all workspaces"
@@ -786,9 +750,8 @@ msgid "Program launcher with optional menu"
 msgstr "オプションでメニューが付くプログラムランチャです"
 
 #: ../plugins/pager/pager.desktop.in.in.h:1
-#, fuzzy
 msgid "Switch between virtual desktops"
-msgstr "全ての仮想デスクトップのミニチュアを表示します"
+msgstr "仮想デスクトップを切り替えます"
 
 # In ja translation: Changed more appropriately
 #: ../plugins/separator/separator.desktop.in.in.h:1
@@ -797,101 +760,25 @@ msgstr "パネルのアイテム間に区切りか空間を加えます"
 
 # Tip help
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:1
-#, fuzzy
 msgid "Hide all windows and show the desktop"
-msgstr "ウィンドウを隠してデスクトップを表示します"
+msgstr "全てのウィンドウを隠してデスクトップを表示します"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:2
 msgid "Show Desktop"
 msgstr "デスクトップを表示"
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
-#, fuzzy
 msgid "Area where notification icons appear"
-msgstr "通知アイコンを表示します"
+msgstr "通知アイコンが表示される領域です"
 
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
 msgid "Switch between open windows using buttons"
-msgstr ""
+msgstr "開いているウィンドウをボタンを使って切り替えます。"
 
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:1
 msgid "Switch between open windows using a menu"
-msgstr ""
+msgstr "開いているウィンドウをメニューを使って切り替えます。"
 
 #: ../settings/xfce4-panel-manager.desktop.in.h:3
 msgid "Panel Manager"
 msgstr "パネルマネージャ"
-
-#~ msgid "Unknown"
-#~ msgstr "不明"
-
-#, fuzzy
-#~ msgid "Copyright (c) 2004-2009"
-#~ msgstr "Copyright (c) 2004-2007"
-
-#~ msgid "Show list of available windows"
-#~ msgstr "利用可能なウィンドウのリストを表示します"
-
-#~ msgid "Show all running applications"
-#~ msgstr "実行している全てのアプリケーションを表示します"
-
-#~ msgid "Popup position:"
-#~ msgstr "ポップアップ位置:"
-
-#~ msgid "Automatic"
-#~ msgstr "自動"
-
-#~ msgid "Toggle desktop show/hide"
-#~ msgstr "デスクトップの表示/非表示を切り替えます"
-
-# CLI --help
-#~ msgid "Show this message and exit"
-#~ msgstr "このメッセージを表示して終了する"
-
-# CLI --help
-#~ msgid "Show configuration dialog"
-#~ msgstr "設定ダイアログボックスを表示する"
-
-# CLI --help
-#~ msgid "Restart panels"
-#~ msgstr "パネルを再起動する"
-
-# CLI --help
-#~ msgid "End the session"
-#~ msgstr "パネルのセッションを終了する"
-
-# CLI --help
-#~ msgid "Add new items"
-#~ msgstr "新しいアイテムを追加する"
-
-#~ msgid "Pager"
-#~ msgstr "ページャ"
-
-#~ msgid "System Tray"
-#~ msgstr "システムトレイ"
-
-#~ msgid "Add Items"
-#~ msgstr "アイテムの追加"
-
-#~ msgid "Add Items to the Panel"
-#~ msgstr "アイテムをパネルに追加します"
-
-#~ msgid "Available Items"
-#~ msgstr "利用可能なアイテム"
-
-# Tip help
-#~ msgid "Remove Panel"
-#~ msgstr "パネルを削除します"
-
-# Tip help
-#~ msgid "New Panel"
-#~ msgstr "パネルを追加します"
-
-#~ msgid "Panel Actions"
-#~ msgstr "パネルアクション"
-
-#~ msgid "Program Launcher"
-#~ msgstr "プログラムランチャ"
-
-#~ msgid "Xfce 4 Panel Manager"
-#~ msgstr "Xfce 4 パネルマネージャ"
