== 4.5.99.1 released! == Bump version number and update translation files for the release.
(Old svn revision: 29358)

--- a/po/nb_NO.po
+++ b/po/nb_NO.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-01-12 18:06+0100\n"
+"POT-Creation-Date: 2009-01-25 23:16+0100\n"
 "PO-Revision-Date: 2005-08-18 01:10+0900\n"
 "Last-Translator: Terje Uriansrud <terje@uriansrud.net>\n"
 "Language-Team: Norwegian Bokmal <i18n-nb@lister.ping.uio.no>\n"
@@ -172,8 +172,8 @@ msgid ""
 "Drag items from the list to a panel or remove\n"
 "them by dragging them back to the list."
 msgstr ""
-"Dra elementer fra listen til et panel eller fjerne de ved å dra de "
-"tilbake til listen."
+"Dra elementer fra listen til et panel eller fjerne de ved å dra de tilbake "
+"til listen."
 
 #: ../panel/panel-dialogs.c:653
 msgid "_Search:"
@@ -409,7 +409,7 @@ msgstr "Bruk all tilgjengelig pla_ss"
 msgid "New Item"
 msgstr "Nytt element"
 
-#: ../plugins/launcher/launcher-exec.c:565
+#: ../plugins/launcher/launcher-exec.c:574
 #, c-format
 msgid "Failed to launch \"%s\""
 msgstr "Klarte ikke starte «%s»."
