--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-25	Jannis Pohlmann <jannis@xfce.org>
+
+	* xfce4-panel.pot, *.po: Update translation files for the release.
+
 2009-01-25  Maximilian Schleiss <maximilian@xfce.org>
 
 	* ja.po: Japanese translation update (Masato Hashimoto)
