Translations updates - ca fr uk
(Old svn revision: 29394)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2009-01-26  Maximilian Schleiss <maximilian@xfce.org>
+
+	* ca.po: Catalan translation update (Carles Muñoz Gorriz)
+	* uk.po: Ukrainian translation udpate (Dmitry Nikitin)
+
 2009-01-25	Jannis Pohlmann <jannis@xfce.org>
 
 	* xfce4-panel.pot, *.po: Update translation files for the release.
