Fix dragging to launcher submenu's (bug #4026).
(Old svn revision: 29414)

--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
 4.x.xx
 ======
 - Block panel autohide if the widget is grabbed (bug #4597).
-
+- Fix dragging to launcher submenu's (bug #4026).
 
 4.5.99.1
 ========
